# bkds-switcher

./: CMakeLists.txt  README.md  bkds_switcher.cpp  event.cpp  event.h  eventQueue.cpp  eventQueue.h  node.cpp  node.h
lib/: CMakeLists.txt
lib/bkds2010/: CMakeLists.txt  auto_rate.h  bkds2010.cpp  bkds2010.h  bkds_control.cpp  cmd_defines.h  connectionHandler.cpp  connectionHandler.h  dsk.h  eff00_13.cpp  eff00_cmds.h  eff01_8a.h  eff01_a1.cpp  eff01_cmds.h  eff15_cmds.h  eff20_cmds.h  eff25_82.h  eff25_cmds.h  eff2e_86.h  eff2e_cmds.h  eff31_cmds.h  eff33_cmds.h  eff35_cmds.h  eff_defines.h  effectDispatcher.cpp  effectDispatcher.h  effect_chr.cpp  effect_chr.h  effect_keyer.h  effect_matte.cpp  effff_cmds.h  enable.cpp  eventmem.cpp  gpiin.cpp  gpiin.h  obsConn.cpp  ping.cpp  ping.h  response.cpp  response.h  (+9 more)
lib/bkds2010/commands/: CMakeLists.txt  auto_rate.cpp  auto_rate.h  command.cpp  command.h  dsk.cpp  dsk.h  eff00_13.cpp  eff00_13.h  eff01_8a.cpp  eff01_8a.h  eff01_9c.cpp  eff01_9c.h  eff01_a1.cpp  eff01_a1.h  eff25_82.cpp  eff25_82.h  eff2e_86.cpp  eff2e_86.h  effect_chr.cpp  effect_chr.h  effect_keyer.cpp  effect_keyer.h  effect_matte.cpp  effect_matte.h  enable.cpp  enable.h  eventmem.cpp  eventmem.h  finekey.cpp  finekey.h  gpiin.cpp  gpiin.h  key.cpp  key.h  keyparams.cpp  keyparams.h  knobs.cpp  knobs.h  matte_colormix.cpp  (+25 more)
lib/bkds2010/effects/: CMakeLists.txt  eff00.cpp  eff00.h  eff00_cmds.h  eff01.cpp  eff01.h  eff10.cpp  eff10.h  eff10_cmds.h  eff14.cpp  eff14.h  eff14_cmds.h  eff15.cpp  eff15.h  eff18.cpp  eff18.h  eff18_cmds.h  eff1e.cpp  eff1e.h  eff1e_cmds.h  eff1f.cpp  eff1f.h  eff1f_cmds.h  eff20.cpp  eff20.h  eff21.cpp  eff21.h  eff21_cmds.h  eff25.cpp  eff25.h  eff2e.cpp  eff2e.h  eff32_cmds.h  eff34_cmds.h  eff3f_cmds.h  eff_aux.cpp  eff_aux.h  eff_aux_cmds.h  eff_framemem.cpp  eff_framemem.h  (+5 more)
lib/bkdsobs/: CMakeLists.txt  bkdsobs.cpp  bkdsobs.h  obsConn.h  wsDispatcher.cpp  wsDispatcher.h
