CMAKE_MINIMUM_REQUIRED (VERSION 3.10)
PROJECT (bkds_swicther)

SET (CMAKE_CPP_FLAGS "-O2 -g -std=c++20")

SET (CMAKE_BINARY_DIR ${CMAKE_BINARY_DIR}/build)
SET (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
SET (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

SET (BKDS_SWITCHER_VERSION_MAJOR 0)
SET (BKDS_SWICTHER_VERSION_MINOR 0)
SET (BKDS_SWICTHER_VERSION_RELEASE 1)

add_subdirectory(lib)

add_executable(bkds_switcher
bkds_switcher.cpp
)

TARGET_LINK_LIBRARIES (bkds_switcher
bkds2010
#bkdsobs
#bkdsweb
)
